--- a/pages/aGeom_history.html
+++ b/pages/aGeom_history.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Vznik analytikej geometrie
+description: "vznik analytickej geometrie"
+keywords: "Rene Descartes, La Geometrie"
+permalink: vznik_analytickej_geometrie
 ---
 
 <h1>Vznik analytikej geometrie</h1>
