--- a/pages/aGeom_space.html
+++ b/pages/aGeom_space.html
@@ -1,6 +1,8 @@
 ---
-layout: default
-title: Priestor 
+title: Priestor
+description: "priestor"
+keywords: "priestor, dimenzia, 3D, 2D, 1D, 0D"
+permalink: priestor
 ---
 
 <h1>Priestor</h1>
