--- a/pages/aGeom_usage.html
+++ b/pages/aGeom_usage.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Využitie analytickej geometrie
+description: "využitie analytickej geometrie"
+keywords: "využitie analytickej geometrie"
+permalink: vyuzitie_analytickej_geometrie
 ---
 
 <h1>Využitie analytickej geometrie</h1>
