--- a/pages/linearFunction.html
+++ b/pages/linearFunction.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Lineárna funkcia
+description: "lineárna funkcia"
+keywords: "lineárna funkcia"
+permalink: linearna_funkcia
 ---
 
 <h1>Lineárna funkcia</h1>
