--- a/pages/numberSystems.html
+++ b/pages/numberSystems.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Číselné sústavy
+description: "číselné sústavy"
+keywords: "číselná sústava, dvojková sústava, desiatková sústava, šesťnástková sústava, šesťdesiatková sústava, sčítanie"
+permalink: ciselne_sustavy
 ---
 
 <h1>Číselné sústavy</h1>
@@ -96,8 +98,8 @@ $$b\cdot16^5 + 0\cdot16^4 + d\cdot16^3 + f\cdot16^2 + e\cdot16^1 + 5\cdot16^0$$
 <span style="color: #003152">Farbou číslo 003152 je napísaný tento text</span> <span style="color: #588bae"> a tento text má farbu 588bae.</span>
 
 <h2>Šesťdesiatková sústava</h2>
-Táto sústava má pôvod zasa u Sumerov. Vymysleli si ju na to, aby mohli veci deliť na viac celých častí. Potrebovali to kvôli nejakým astronomickým výpočtom. Napríklad, ak by mala hodina 10 častí, tak by ju vedeli rozdeliť na dve alebo na päť menších častí. Keď má hodina 60 častí (minút), tak sa dá rozdeliť na dve, tri, štyri, päť, šesť  a ďalších veľa častí. Znakov mali teda 60. My ich nepoznáme, tak si niektoré z nich vymyslíme. Znak &#x1F603 bude reprezentovať počet 4, znak &#x1F609 bude počet 15, znak &#x1F61C bude 20, znak &#x1F622 bude 28, znak &#x2B50 bude 33, znak &#x1F30F bude 40, znak &#x1F33A bude 51 a znak &#x1F349 bude 56. Číslo &#x1F603 &#x1F609 &#x1F61C &#x1F622 &#x2B50 &#x1F30F &#x1F33A &#x1F349 vieme zapísať takto:<br /><br />
-<div style="text-align: center">&#x1F603 .60<sup>7</sup> +  &#x1F609 .60<sup>6</sup> +   &#x1F61C .60<sup>5</sup> +   &#x1F622 .60<sup>4</sup> +   &#x2B50 .60<sup>3</sup> +   &#x1F30F .60<sup>2</sup> +   &#x1F33A .60<sup>1</sup> +  &#x1F349 .60<sup>0</sup></div><br /><br />
+Táto sústava má pôvod zasa u Sumerov. Vymysleli si ju na to, aby mohli veci deliť na viac celých častí. Potrebovali to kvôli nejakým astronomickým výpočtom. Napríklad, ak by mala hodina 10 častí, tak by ju vedeli rozdeliť na dve alebo na päť menších častí. Keď má hodina 60 častí (minút), tak sa dá rozdeliť na dve, tri, štyri, päť, šesť  a ďalších veľa častí. Znakov mali teda 60. My ich nepoznáme, tak si niektoré z nich vymyslíme. Znak &#x1F603; bude reprezentovať počet 4, znak &#x1F609; bude počet 15, znak &#x1F61C; bude 20, znak &#x1F622; bude 28, znak &#x2B50; bude 33, znak &#x1F30F; bude 40, znak &#x1F33A; bude 51 a znak &#x1F349; bude 56. Číslo &#x1F603; &#x1F609; &#x1F61C; &#x1F622; &#x2B50; &#x1F30F; &#x1F33A; &#x1F349; vieme zapísať takto:<br /><br />
+<div style="text-align: center">&#x1F603; .60<sup>7</sup> +   &#x1F609; .60<sup>6</sup> +   &#x1F61C; .60<sup>5</sup> +   &#x1F622; .60<sup>4</sup> +   &#x2B50; .60<sup>3</sup> +   &#x1F30F; .60<sup>2</sup> +   &#x1F33A; .60<sup>1</sup> +   &#x1F349; .60<sup>0</sup></div><br /><br />
 
 My ju dnes používame v už spomínanom čase. Hodina má šesťdediat minút a minúta má šesťdesiat sekúnd. Tiež sa používa v geometrii. Jeden stupeň má šesťdesiat minút. <br /><br />
 
