--- a/pages/numbers.html
+++ b/pages/numbers.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Číselné množiny
+description: "číselné množiny"
+keywords: "číselné množiny, prirodzené čísla, celé čísla, racionálne čísla, iracionálne čísla, reálne čísla"
+permalink: ciselne_mnoziny
 ---
 
 <h1>Číselné množiny</h1>
