--- a/pages/stat_PositionMeasures.html
+++ b/pages/stat_PositionMeasures.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Miery polohy
+description: "miery polohy"
+keywords: "priemer, modus, medián, kvantil"
+permalink: miery_polohy
 ---
 
 <h1>Miery polohy</h1>
@@ -10,7 +12,7 @@ title: Miery polohy
 
 Miery polohy hovoria o polohe údajov na číselnej osi. Sú to čísla, ktoré vhodne reprezentujú údaje. K mieram polohy patrí modus, kvantily a stredná hodnota. Stredná hodnota môže byť buď medián alebo priemer. <br /><br />
 
-Vďaka mieram polohy vieš, v akých číslach sa ti pohybujú údaje bez toho, aby si si ich musel všetky prečítať. Napríklad ak priemer cien bytov je 90 000 eur, nemusíš poznať všetky ceny bytov, aby si vedel, že ceny bytov sa pohybujú v desiatkach tisíc. Keď meriaš teploty v januári, priemer ti vyjde možno -5&#8451 . Vieš, že teploty sa budú pohybovať niekde v mínusových číslach.<br /><br />
+Vďaka mieram polohy vieš, v akých číslach sa ti pohybujú údaje bez toho, aby si si ich musel všetky prečítať. Napríklad ak priemer cien bytov je 90 000 eur, nemusíš poznať všetky ceny bytov, aby si vedel, že ceny bytov sa pohybujú v desiatkach tisíc. Keď meriaš teploty v januári, priemer ti vyjde možno -5&#8451;. Vieš, že teploty sa budú pohybovať niekde v mínusových číslach.<br /><br />
 
 Miery polohy vedia odhaliť aj nejaké nepresnosti. Napríklad meriaš veľkosť bacilov. Priemerne budú merať 400nm. Keď nameráš päť metrového bacila, vieš, že si niekde spravil chybu. Využiť to môžeš napríklad, keď si chceš porovnať plat. Budeš pracovať ako čašník a na internete zistíš, že priemerná hrubá mzda v tvojom obore je nejakých 850 eur. Keď dostaneš aj ty mzdu niekde okolo 850 eur, vieš, že je to na poriadku. Keď dostaneš nejakú veľku, napríklad 5000 eur, tak je to dosť ďaleko od strednej hodnoty a ty vieš, že šéf si ťa extrémne váži. Keď dostaneš 200 eur, vieš že treba hľadať iné zamestnanie.<br /><br />
 
