--- a/pages/stat_VariabilityMeasures.html
+++ b/pages/stat_VariabilityMeasures.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Miery variability
+description: "miery variability"
+keywords: "variančné rozpätie, priemerná absolútna odchýlka, rozptyl, smerodajná odchýlka, variančný koeficient"
+permalink: miery_variability
 ---
 
 <h1>Miery variability</h1>
@@ -105,5 +107,4 @@ Pozrime sa na to, ako veľmi sú rozptýlení hráči Inter Milano. Vypočítame
   <figcaption>Obr. 5.: Takto vyzerá keď sa smerodajná odchýlka vydelí veľkosťou dát.</figcaption>
 </figure>
 
-</div>
 </div>
