--- a/pages/stat_data.html
+++ b/pages/stat_data.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Štatistika-údaje
+description: "údaje v štatistike"
+keywords: "údaje, dáta, získavanie údajov"
+permalink: statistika_udaje
 ---
 
 <h1>Údaje</h1>
