--- a/pages/stat_intro.html
+++ b/pages/stat_intro.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Úvod do štatistiky
+description: "úvod do štatistiky"
+keywords: "uvod do statistiky, statistika"
+permalink: statistika_uvod
 ---
 
 <h1>Úvod do štatistiky</h1>
