--- a/pages/stat_outliers.html
+++ b/pages/stat_outliers.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Outliers
+description: "outliers"
+keywords: "outliers"
+permalink: outliers
 ---
 
 <h1>Outliers</h1>
@@ -10,7 +12,7 @@ Na koniec si povieme niečo o outliers. Táto vec nepatrí k nástrojom štatist
  
 Ako angličtiny znalý človek, vieš, že outliers znamená <i>tí, čo ležia mimo</i>. Out je von alebo mimo a liers je ležiaci. Nevieme presný termín v slovenčine, tak budeme používať tento anglický. Outlier je teda to, čo leží mimo. V dátach sú to údaje, ktoré sú absolútne od veci. Buď sú príliš veľké alebo príliš malé. <br /><br />
 
-Príklady: Meriaš teploty v januári. V jeden deň príde teplý front a bude 41 &degC. Je to jasný outlier, v januári predsa nameráš tak od +2&degC po -20&degC. Druhý príklad. Meriaš výšku prvákov. Prváci merajú tak 130cm. Lenže v triede je aj prepadnutý 15-násť ročný Móric. Ten má 190cm. Zase vyčnieva z radu. Je to outlier. Takisto outlierom by bola aj napriemerne inteligentná 7-ročná Anička. Študovala by už na strednej škole. Jej spolužiaci merajú okolo 180cm a ona iba 130cm. Aj jej výška vyčnieva z radu. Outlierov v dátach nie je veľa. Od toho sú outlieri. Ak by ich bolo veľa, už by nevyčnievaly z radu. Ak by v januári bežne bývalo 40 &degC, tak by to bolo úplne normálne, nie výnimočné.<br /><br />
+Príklady: Meriaš teploty v januári. V jeden deň príde teplý front a bude 41 &deg;C. Je to jasný outlier, v januári predsa nameráš tak od +2&deg;C po -20&deg;C. Druhý príklad. Meriaš výšku prvákov. Prváci merajú tak 130cm. Lenže v triede je aj prepadnutý 15-násť ročný Móric. Ten má 190cm. Zase vyčnieva z radu. Je to outlier. Takisto outlierom by bola aj napriemerne inteligentná 7-ročná Anička. Študovala by už na strednej škole. Jej spolužiaci merajú okolo 180cm a ona iba 130cm. Aj jej výška vyčnieva z radu. Outlierov v dátach nie je veľa. Od toho sú outlieri. Ak by ich bolo veľa, už by nevyčnievaly z radu. Ak by v januári bežne bývalo 40 &deg;C, tak by to bolo úplne normálne, nie výnimočné.<br /><br />
 
 Na outlier-ov treba dávať pozor. Sú to takí záškodníci. Natiahnu ti priemer, ani nevieš ako. Napríklad zoberme si skupinku desiatich zamestnancov a ich šéfa. Každý zamestnanec má plat 500 eur a šéf má 5000. Rád by si povedal, že zamestanci dostávajú priemerne 500 eur, ale nemôžeš, lebo šéf ti priemer posunie úplne niekde inde. Rátaj s nami: (500*10+5000)/11=909,09 eur. Priemer ti síce vyskočí takto vysoko, ale medián ťa zachráni. Ten ti povie, že stredná hodnota je 500. <br /><br />
 
