--- a/pages/stat_playerAnalysis.html
+++ b/pages/stat_playerAnalysis.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Analýza údajov o futbalistoch
+description: "analýza údajov o futbalistoch"
+keywords: "štatistika príklad"
+permalink: analyza_udajov_o_futbalistoch
 ---
 
 <h1>Analýza údajov o futbalistoch</h1>
