--- a/pages/stat_usage.html
+++ b/pages/stat_usage.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Naozajstné využitie štatistiky
+description: "naozajstné využitie štatistiky"
+keywords: "využitie štatistiky"
+permalink: naozajstne_vyuzitie_statistiky
 ---
 
 <h1>Naozajstné využitie štatistiky</h1>
@@ -21,8 +23,6 @@ V článku sa venovali výžive ľudí po celom svete. Chceli vedieť, ako výž
 
 <h3>Palm oil</h3>
 <b>odkaz: </b> <a href="https://ourworldindata.org/palm-oil" target="_blank">https://ourworldindata.org/palm-oil</a><br /><br />
-Palmový olej sa dnes používa všade. Od kozmetiky cez biopalivá až po potraviny. V roku 1961 svet priemerne vyprodukoval 1,48 milióna ton palmového oleja ročne. Toto číslo rástlo, až sme sa dostali na dnešných 71,45 milióna ton. Je to najviac zo všetkých rastlinných olejov. Najviac palmového oleja produkujú Malajzia, Indonézia a Timor. Vyrába sa však aj Thajsku, Kolumbií, Nigérií či Brazílií. Najväčšími konzumentami sú Spojené štáty, Čína, India, ale prekvapivo aj Taliansko a Španielsko. S veľkou spotrebou palmového oleja prichádza aj potreba dorábať ho stále viac. Od roku 2001 po rok 2016 prišla Indonézia o 23% svojich dažďových pralesov. Našťastie je trend odlesňovania v Indonézií klesajúci. S alternatívanmi palmového oleja to tiež nie je jednoduché, pretože ostatné rastliny, z ktorých sa dá olej vyrobiť, potrebujú pôdy ešte oveľa, oveľa viac. Nižšia spotreba palmového oleja by sa dala docieliť aj tak, že by sa prestal používať v biopalivách. Svojou trochou môže prispieť každý tým, že zníži jeho spotrebu, napríklad v potravinách.
-
-
+Palmový olej sa dnes používa všade. Od kozmetiky cez biopalivá až po potraviny. V roku 1961 svet priemerne vyprodukoval 1,48 milióna ton palmového oleja ročne. Toto číslo rástlo, až sme sa dostali na dnešných 71,45 milióna ton. Je to najviac zo všetkých rastlinných olejov. Najviac palmového oleja produkujú Malajzia, Indonézia a Timor. Vyrába sa však aj Thajsku, Kolumbií, Nigérií či Brazílií. Najväčšími konzumentami sú Spojené štáty, Čína, India, ale prekvapivo aj Taliansko a Španielsko. S veľkou spotrebou palmového oleja prichádza aj potreba dorábať ho stále viac. Od roku 2001 po rok 2016 prišla Indonézia o 23% svojich dažďových pralesov. Našťastie je trend odlesňovania v Indonézií klesajúci. S alternatívanmi palmového oleja to tiež nie je jednoduché, pretože ostatné rastliny, z ktorých sa dá olej vyrobiť, potrebujú pôdy ešte oveľa, oveľa viac. Nižšia spotreba palmového oleja by sa dala docieliť aj tak, že by sa prestal používať v biopalivách. 
 
 </div>
