--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Matematicko-slovenský slovník
+description: "vysvetlenie matematických výrazov"
+keywords: "slovník, matematické slová"
+permalink: matematicko-slovensky_slovnik
 ---
 
 <div class='content'>
@@ -9,7 +11,7 @@ title: Matematicko-slovenský slovník
 
 <div class='vocabLetter'>A</div>
 <div class='vocabEntry'>
-<b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka [3], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div>
+<b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka [1], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div>
 </div>
 
 <div class='vocabLetter'>C</div>
@@ -38,7 +40,7 @@ title: Matematicko-slovenský slovník
 
 <div class='vocabLetter'>L</div>
 <div class='vocabEntry'>
-<b>Lineárny</b> <div>V Synonimickom slovníku slovenčiny [1] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.</div>
+<b>Lineárny</b> <div>V Synonimickom slovníku slovenčiny [2] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.</div>
 </div>
 
 <div class='vocabLetter'>R</div>
@@ -73,8 +75,6 @@ Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať ne
 [1] Slovník súčasného slovenského jazyka. 2015. https://slovnik.juls.savba.sk <br /><br />
 
 [2] Synonymický slovník slovenčiny. 2004. https://slovnik.juls.savba.sk <br /><br />
-
-[3] Slovník súčasného slovenského jazyka. 2015. https://slovnik.juls.savba.sk <br /><br />
 </div>
 
 
