--- a/pages/aGeom_coorSys.html
+++ b/pages/aGeom_coorSys.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Súradnicová sústava
+description: "analytická geometria súradnicová sústava"
+keywords: "karteziánsky súradnicový systém, bod, súradnica, os"
+permalink: analyticka_geometria_suradnicova_sustava
 ---
 
 <h1>Súradnicová sústava</h1>
@@ -11,10 +13,10 @@ Sústavu súradníc ani slovami opísať nevieme, tak hneď začneme obrázkom.
 
 <figure>
   <img src="../assets/images/aGeom_coorSystem.png" alt="Karteziánska súradnicová sústava">
-  <figcaption>Obr. 1.: Karteziánska súradnicová sústava. Hore je pre trojrozmerný priestora dolu pre dvojrozmerný priestor</figcaption>
+  <figcaption>Obr. 1.: Karteziánska súradnicová sústava. Hore je pre trojrozmerný priestor a dolu pre dvojrozmerný priestor.</figcaption>
 </figure>
 
-To čo je na obrázku sa nazýva Karteziánska súradnicová sústava. Je to najpoužívanejší typ a bežne sa s ním môžeš stretnúť v rôznych článkoch, kde sú nejaké grafy. Karteziánska preto, lebo Descartes. Minule sme si o tomto človiečikovi napísali viac, tak teraz len v skratke. René Descartes bol francúzsky matematik, ktorý sa zaoberal analytickou geometriou. Jeho meno je po latinsky Renatus Cartesius a súradnicová sústava je pomenaovaná na jeho počesť. <br /><br />
+To, čo je na obrázku sa nazýva Karteziánska súradnicová sústava. Je to najpoužívanejší typ a bežne sa s ním môžeš stretnúť v rôznych článkoch, kde sú nejaké grafy. Karteziánska preto, lebo Descartes. Minule sme si o tomto človiečikovi napísali viac, tak teraz len v skratke. René Descartes bol francúzsky matematik, ktorý sa zaoberal analytickou geometriou. Jeho meno je po latinsky Renatus Cartesius a súradnicová sústava je pomenovaná na jeho počesť.<br /><br />
 
 Súradnicová sústava sa skladá z osí, ktoré prechádzajú začiatkom. Osí je toľko, koľko je rozmerný priestor. Sú na seba kolmé. Pre každú os treba na nej vyznačiť jednotky. Osi môžu mať rôzne jednotky. Jedna os môže zobrazovať metre, druhá centimetre a tretia sekundy. Karteziánsky súradnicový systém môžeš vidieť v geometrií, pri matematických funkciách, vo fyzike pri znázorňovaní vzťahov, pri rôznych grafoch, ale aj v počítačovej grafike.<br /><br />
 
@@ -23,8 +25,7 @@ V súradnicovej sústave vieme zobraziť body. Každý bod má presné súradnic
 
 <figure>
   <img src="../assets/images/aGeom_coorSystemsPoint.png" alt="Bod v karteziánskej sústave súradníc">
-  <figcaption>Obr. 2.: Súradnice bodu sa značia ako A[x,y,z]. Bod B je iba v dvorozmernom priestore, tak súradnica z mu chýba. </figcaption>
+  <figcaption>Obr. 2.: Súradnice bodu sa značia ako A[x,y,z]. Bod B je iba v dvojrozmernom priestore, tak súradnica z mu chýba.</figcaption>
 </figure>
-
 
 </div>
