--- a/pages/howNumbersWereBorn.html
+++ b/pages/howNumbersWereBorn.html
@@ -1,26 +1,32 @@
 ---
-layout: default
 title: Ako vznikli čísla
+description: "vznik čísiel"
+keywords: "vznik čísiel, čísla, počítanie"
+permalink: ako_vznikli_cisla
 ---
 
 <h1>Ako vznikli čísla</h1>
 
 <div class="content">
-Už praveký človek potreboval počítať. Chcel si zrátať dni alebo ulovené zvieratá. Najprv to rátal na prstoch, ale keď zvieratá pribúdali, tak mu už nestačili svoje prsty, ani prsty jeho rodinny a nakoniec mu došli aj prsty kamarátov. Preto si začal robiť zárezy do kostí. To bolo zhruba 40 000 rokov pred našim letopočtom. Ako sa spoločnosť vyvíjala, prestali mu stačiť aj kosti. <br /><br />
+Už praveký človek mal potrebu niečo počítať. Chcel si zrátať dni alebo ulovené zvieratá. Najskôr to rátal na prstoch. Postupom času však zvieratá pribúdali, a tak mu už nestačili jeho prsty, ani prsty jeho rodinny a nakoniec mu došli aj prsty kamarátov. Preto si začal robiť zárezy do kostí. To bolo zhruba 40 000 rokov pred našim letopočtom. Ako sa spoločnosť vyvíjala, nestačili mu už ani len tie kosti.<br /><br />
 
-Niekedy okolo roku 4 000 pred našim letopočtom začali ľudia používať na počítanie také vypálené kúsky hliny. Na tie kúsky si napísali znak toho, čo počítali. Keď počítali napríklad ovce, písali nejaký znak a keď kozy, tak napísali zase iný znak. Títo ľudia tiež zistili, že keď majú 1 000 oviec, tak spraviť 1 000 kúskov by bolo trochu náročné. Pomohli si znakmi. Pre 1 ovcu bol iný znak ako pre 10 oviec alebo pre 100 oviec. <br /><br />
+Niekedy okolo roku 4 000 pred našim letopočtom začali ľudia používať na počítanie akési vypálené kúsky hliny. Na tie kúsky si napísali znak toho, čo počítali. Keď počítali napríklad ovce, písali znak, ktorý predstavoval ovce. Keď rátali kozy, tak napísali zase iný znak, znamenajuci kozy. Časom si títo ľudia uvedomili, že keď majú 1 000 oviec, tak spraviť 1 000 hlinených kúskov by bolo trochu náročné. Pomohli si znakmi. Pre 1 ovcu bol rozdielny znak, ako pre 10 oviec, a pre 100 oviec bol zase iný symbol, ako pre tých 10, a tak ďalej. Prispôsobili sa zvyšovania počtu kusov zvierat.<br /><br />
 
-Postupom času ľudia zasa čísla vylepšili. Prišli totiž na to, že mať iný znak pre ovcu, iný pre kozu, iný pre zajaca, iný pre to a iný aj pre hento je zbytočné. Vymysleli teda znaky, ktoré reprezentovali iba počet. Tak prišli na svet prvé naozajstné čísla. Narodili sa okolo roku 3 100 pred našim letopočtom. [1] <br /><br />
+Postupom času ľudia čísla opäť vylepšili. Prišli totiž na to, že mať iný znak pre ovcu, iný pre kozu, iný pre zajaca, iný pre to a iný pre tamto, je úplne zbytočné. Vymysleli teda znaky, ktoré reprezentovali iba počet. Tak prišli na svet prvé naozajstné čísla. Uzreli svetlo sveta okolo roku 3 100 pred našim letopočtom. [1] <br /><br />
 
-Týmto dátumom sme sa dostali až k starovekým civilizáciam. Egypťania, Mayovia, Rimania, Gréci, Sumeri, ale aj Slovania - títo všetci už poznali čísla. Boli to znaky, ktoré označovali určitý počet. 
+Týmto dátumom sme sa dostali až k starovekým civilizáciam. Egypťania, Mayovia, Rimania, Gréci, Sumeri, ale aj Slovania - títo všetci už poznali čísla. Boli to znaky, ktoré označovali určitý počet.
 <figure>
-  <img src="../assets/images/numSys_AncientNums.png" alt="Míňame 6 eur alebo 490 eur">
+  <img src="../assets/images/numSys_AncientNums.png" alt="Čísla starovekých národov.">
   <figcaption>Obr. 1.: Takto písali čísla ľudia veľmi dávno pred nami.</figcaption>
 </figure>
 
 My sme si zvykli počet označovať znakmi 0,1,2,3,4,5,6,7,8,9. Tieto naše čísla nie sú žiadna novinka. Používať ich začali v Indii, niekedy na konci staroveku. V 9.-tom storočí nášho letopočtu čísla prevzali Araby a upravili ich do podoby, v ktorej ich poznáme dnes [2]. Znaky, ktorými sa zapisujú čísla sa nazývajú cifry.
 
-<h2>Zdroje</h2>
-[1] https://en.wikipedia.org/wiki/History_of_ancient_numeral_systems <br />
+<h1>Zdroje</h1>
+
+<div class='literature'>
+[1] https://en.wikipedia.org/wiki/History_of_ancient_numeral_systems<br /><br />
 [2] https://www.britannica.com/science/numeral/Development-of-modern-numerals-and-numeral-systems#ref797079
+</div>
+
 </div>
