--- a/pages/stat_correlation.html
+++ b/pages/stat_correlation.html
@@ -1,6 +1,8 @@
 ---
-layout: default
 title: Korelácia
+description: "korelácia"
+keywords: "korelácia, korelačný koeficient"
+permalink: korelacia
 ---
 
 <h1>Korelácia</h1>
@@ -147,7 +149,6 @@ Zase sme na tom o kúsok lepšie. Už vieme povedať aj vzťah medzi dvomi údaj
 <td>Lionel Messi</td>
 <td>680 333 333,33</td>
 <td>-2 183,33</td>
-</td>
 </tr>
 </table>
 <br /><br />
@@ -229,7 +230,6 @@ Tu si vynásobíme rozdiely, medzi ktorými chceme hľadať vzťahy.<br /><br />
 <td>Lionel Messi</td>
 <td>1,374</td>
 <td>-1,869</td>
-</td>
 </tr>
 </table>
 <br /><br />
@@ -292,7 +292,5 @@ Už vieme ako korelačný koeficient prišiel na svet, vieme čo znamená a viem
 </figure>
 
 Ešte v úvode sme chceli zistiť vzťahy medzi overralom a cenou, medzi výškou a vekom, medzi gk_diving a skill_ball_control. Pozri sa na graf a skús na to prísť sám. Nachvíľu prestaň čítať a pozri sa na ten graf, lebo text pokračuje riešením. Medzi overallom a cenou je korelácia  a rastú tým istým smerom. Vek a výška medzi sebou vzťah nemajú. Medzi gk_diving a skill_ball_control je záporná korelácia, to znamená, že rastie každé iným smerom. Porozmýšľaj aj nad vzťahmi, ktoré majú medzi sebou iné atribúty. Skús podumať aj nad tým, prečo políčka na diagonále majú korelačný koeficient 1.
-
-
 
 </div>
